Create CustomerController; refactor CustomerRepository and CustomerService